added best offers

--- a/src/Components/Pages/Home/SpecialProducts/TopRated/TopRated.css
+++ b/src/Components/Pages/Home/SpecialProducts/TopRated/TopRated.css
@@ -15,7 +15,7 @@
     content:'';
     width:100px;
     height:1px;
-    background-color: black;
+    background-color: #fa929d;
     position: absolute;
     margin-left: -120px;
     margin-top: 15px;
@@ -25,7 +25,7 @@
     content:'';
     width:100px;
     height:1px;
-    background-color: black;
+    background-color: #fa929d;
     position: absolute;
     margin-left: 20px;
     margin-top: 15px;
