working parallex and logo sections

--- a/src/Components/Pages/Home/ParallexSection.jsx/ParallexSection.css
+++ b/src/Components/Pages/Home/ParallexSection.jsx/ParallexSection.css
@@ -2,3 +2,9 @@
     background-image: url("https://ps-beautyshop.myshopify.com/cdn/shop/files/slider_banner_4_1296x.png?v=1613681483");
     height: 450px;
 }
+
+.deal{
+    letter-spacing: 10px;
+    font-weight: 400;
+    
+}
